:bug: Show search results on mobile
Push content down to do it

--- a/docs/themes/avocadocs/static/styles/search.css
+++ b/docs/themes/avocadocs/static/styles/search.css
@@ -102,6 +102,12 @@
   z-index: 1;
 }
 
+@media (max-width: 768px) {
+  .search-all-results {
+    position: relative;
+  }
+}
+
 .search-page-results {
   max-width: 105ch;
 }
